Tópico HTML, Atividade 1

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>MusicDot</h1>
     
+    <h2>Bem-vindo à MusicDot, seu portal de cursos de musica online.</h2>
+    
+    <ul>
+        <li>Confira nossas promoções</li>
+        <li>Receba informações sobre nossos lançamentos por e-mail.</li>
+        <li>Navegue por nossos cursos disponíveis.</li>
+        <li>Aprenda sem sair de casa.</li>
+    </ul>
 </body>
 </html>
