--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>MusicDot</h1>
@@ -17,5 +16,15 @@
         <li>Navegue por nossos cursos disponíveis.</li>
         <li>Aprenda sem sair de casa.</li>
     </ul>
+
+    <table style="border: 2px solid black;" >
+        <tr >
+            <th style="border: 2px solid black;">fotos</th>
+        </tr>
+        <tr>
+            <td style="border: 2px solid black;">foto1</td>
+            <td style="border: 2px solid black;">foto2</td>
+        </tr>
+    </table>
 </body>
 </html>
