Tópico HTML, Atividade 3

--- a/sobre.html
+++ b/sobre.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre</title>
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <title>MusicDot | Sobre a empresa</title>
 </head>
 <body>
     <img src="img/logo.svg" alt="Logo MusicDot">
+
     <h2>Sobre a empresa</h2>
+
     <p>A MusicDot e a maior escola online de musica do mundo. Fundada em 1932, possui estudios em 124 paises.</p>
     <p>Nossa matriz fica em Mafra, em Santa Catarina. De la, saem grande parte das gravaçoes de nossos cursos. Nossa matriz:</p>
+
     <img src="img/matriz-musicdot.png" alt="Matriz MusicDot." height="450px" style="margin-left: 20px;">
     <figcaption style="font-weight: bold; margin-left: 20px;">Matriz MusicDot</figcaption>
+
     <p>Assine os cursos da MusicDot. Acesse nosso site ou entre em contato se tiver duvidas. Conheça tambem nossa historia e nossos diferenciais.</p>
+
     <h4>Historia</h4>
     <img src="img/familia-tupfeln.jpg" alt="Familia Tupfeln" height="450px" style="margin-left: 20px;">
     <figcaption style="margin-left: 20px;"  >Familia Tupfeln</figcaption>
+    
     <p>
         A fundaçao em 1932 ocorreu no momento da descoberta economica de cursos por stream online no interior de Santa Catarina. A familia Tupfeln, tradicional na regiao, investiu todas as suas<br>
         economias nessa nova iniciativa, revolucionaria para a epoca.A fundadora frau Dagmar Olaf Tupfeln, dotada de particular visao administrativa, guiou os proprios negocios da empresa durante mais de 50<br>
